--- a/newsletter.html
+++ b/newsletter.html
@@ -75,140 +75,7 @@
 <!-- PDF Cards -->
 <section class="container-page my-5">
   <div class="row g-4">
-    <div class="col-md-6 col-lg-4">
-      <a href="./assets/files/NEWS_IPTBM In Focus, Volume 1, Issue 1.pdf" target="_blank" class="text-decoration-none">
-        <div class="pdf-card">
-            <img src="./assets/img/newsletter_thumbnail/NEWS_IPTBM In Focus, Volume 1, Issue 1.png"
-                alt="Preview of Newsletter"
-                loading="lazy"
-                class="img-fluid">
-          <div class="card-body text-center mt-2">
-            <h6>NEWS IPTBM Vol 1, Issue 1</h6>
-            <small>Click to open PDF</small>
-          </div>
-        </div>
-      </a>
-    </div>
 
-    <div class="col-md-6 col-lg-4">
-      <a href="./assets/files/NEWS_Issue2_Quarter2_Final.pdf" target="_blank" class="text-decoration-none">
-        <div class="pdf-card">
-            <img src="./assets/img/newsletter_thumbnail/NEWS_Issue 2 Quarter 2 Final.png"
-                alt="Preview of Newsletter"
-                loading="lazy"
-                class="img-fluid">
-          <div class="card-body text-center mt-2">
-            <h6>NEWS Issue 2 Quarter 2</h6>
-            <small>Click to open PDF</small>
-          </div>
-        </div>
-      </a>
-    </div>
-
-    <div class="col-md-6 col-lg-4">
-      <a href="./assets/files/assets/files/NEWS_IP-TBM_in_Focus_(V2,Q1).pdf" target="_blank" class="text-decoration-none">
-        <div class="pdf-card">
-            <img src="./assets/img/newsletter_thumbnail/NEWS_IP-TBM in Focus (V2,Q1) (1).png"
-                alt="Preview of Newsletter"
-                loading="lazy"
-                class="img-fluid">
-          <div class="card-body text-center mt-2">
-            <h6>NEWS IP-TBM in Focus (V2,Q1)</h6>
-            <small>Click to open PDF</small>
-          </div>
-        </div>
-      </a>
-    </div>
-<!-- newspaper -->
-    <div class="col-md-6 col-lg-4">
-      <a href="./assets/files/NEWS_IP-TBM in Focus (V2,Q2)..pdf" target="_blank" class="text-decoration-none">
-        <div class="pdf-card">
-            <img src="./assets/img/newsletter_thumbnail/NEWS_IP-TBM in Focus (V2,Q2).png"
-                alt="Preview of Newsletter"
-                loading="lazy"
-                class="img-fluid">
-          <div class="card-body text-center mt-2">
-            <h6>NEWS_IP-TBM in Focus (V2,Q2)</h6>
-            <small>Click to open PDF</small>
-          </div>
-        </div>
-      </a>
-    </div>
-<!-- newspaper -->
-    <div class="col-md-6 col-lg-4">
-      <a href="./assets/files/NEWS_IP-TBM in Focus (V2,Q3)....pdf" target="_blank" class="text-decoration-none">
-        <div class="pdf-card">
-            <img src="./assets/img/newsletter_thumbnail/NEWS_IP-TBM in Focus (V2,Q3).png"
-                alt="Preview of Newsletter"
-                loading="lazy"
-                class="img-fluid">
-          <div class="card-body text-center mt-2">
-            <h6>NEWS_IP-TBM in Focus (V2,Q3)</h6>
-            <small>Click to open PDF</small>
-          </div>
-        </div>
-      </a>
-    </div>
-<!-- newspaper -->
-    <div class="col-md-6 col-lg-4">
-      <a href="./assets/files/NEWS_Innovation In Focus Q4.pdf" target="_blank" class="text-decoration-none">
-        <div class="pdf-card">
-            <img src="./assets/img/newsletter_thumbnail/NEWS_Innovation In Focus Q4.png"
-                alt="Preview of Newsletter"
-                loading="lazy"
-                class="img-fluid">
-          <div class="card-body text-center mt-2">
-            <h6>NEWS_Innovation In Focus Q4</h6>
-            <small>Click to open PDF</small>
-          </div>
-        </div>
-      </a>
-    </div>
-<!-- newspaper -->
-    <div class="col-md-6 col-lg-4">
-      <a href="./assets/files/NEWS_Innovation In Focus Q1.pdf" target="_blank" class="text-decoration-none">
-        <div class="pdf-card">
-            <img src="./assets/img/newsletter_thumbnail/NEWS_Innovation In Focus Q1.png"
-                alt="Preview of Newsletter"
-                loading="lazy"
-                class="img-fluid">
-          <div class="card-body text-center mt-2">
-            <h6>NEWS_Innovation In Focus Q1</h6>
-            <small>Click to open PDF</small>
-          </div>
-        </div>
-      </a>
-    </div>
-<!-- newspaper -->
-    <div class="col-md-6 col-lg-4">
-      <a href="./assets/files/NEWS_Innovation In Focus Q3.pdf" target="_blank" class="text-decoration-none">
-        <div class="pdf-card">
-            <img src="./assets/img/newsletter_thumbnail/NEWS_Innovation In Focus Q3.png"
-                alt="Preview of Newsletter"
-                loading="lazy"
-                class="img-fluid">
-          <div class="card-body text-center mt-2">
-            <h6>NEWS_Innovation In Focus Q3</h6>
-            <small>Click to open PDF</small>
-          </div>
-        </div>
-      </a>
-    </div>
-<!-- newspaper -->
-    <div class="col-md-6 col-lg-4">
-      <a href="./assets/files/NEWS_FINAL Q4.pdf" target="_blank" class="text-decoration-none">
-        <div class="pdf-card">
-            <img src="./assets/img/newsletter_thumbnail/NEWS_FINAL Q4.png"
-                alt="Preview of Newsletter"
-                loading="lazy"
-                class="img-fluid">
-          <div class="card-body text-center mt-2">
-            <h6>NEWS_IPTBM in Focus Q4</h6>
-            <small>Click to open PDF</small>
-          </div>
-        </div>
-      </a>
-    </div>
 <!-- newspaper -->
     <div class="col-md-6 col-lg-4">
       <a href="./assets/files/NEWS_FINAL_2025 In Focus Q1.pdf" target="_blank" class="text-decoration-none">
@@ -218,7 +85,7 @@
                 loading="lazy"
                 class="img-fluid">
           <div class="card-body text-center mt-2">
-            <h6>NEWS_FINAL_2025 In Focus Q1</h6>
+            <h6><em>In progress</em></h6>
             <small>Click to open PDF</small>
           </div>
         </div>
@@ -226,14 +93,43 @@
     </div>
 <!-- newspaper -->
     <div class="col-md-6 col-lg-4">
-      <a href="./assets/files/NEWS_IPTBM In Focus (Q3).pdf" target="_blank" class="text-decoration-none">
+      <a href="./assets/files/newspaper/Innovation In Focus Quarter 4.pdf" target="_blank" class="text-decoration-none">
         <div class="pdf-card">
-            <img src="./assets/img/newsletter_thumbnail/NEWS_IPTBM In Focus (Q3).png"
+            <img src="./assets/img/newsletter_thumbnail/NEWS_Innovation In Focus Q4.png"
                 alt="Preview of Newsletter"
                 loading="lazy"
                 class="img-fluid">
           <div class="card-body text-center mt-2">
-            <h6>NEWS_IPTBM In Focus (Q3)</h6>
+            <h6>Innovation In Focus Quarter 4</h6>
+            <small>Click to open PDF</small>
+          </div>
+        </div>
+      </a>
+    </div>
+    <!-- newspaper -->
+    <div class="col-md-6 col-lg-4">
+      <a href="./assets/files/newspaper/Innovation In Focus Quarter 3.pdf" target="_blank" class="text-decoration-none">
+        <div class="pdf-card">
+            <img src="./assets/img/newsletter_thumbnail/NEWS_Innovation In Focus Q3.png"
+                alt="Preview of Newsletter"
+                loading="lazy"
+                class="img-fluid">
+          <div class="card-body text-center mt-2">
+            <h6>Innovation In Focus Quarter 3</h6>
+            <small>Click to open PDF</small>
+          </div>
+        </div>
+      </a>
+    </div>
+      <div class="col-md-6 col-lg-4">
+      <a href="./assets/files/newspaper/Innovation In Focus Quarter 2.pdf" target="_blank" class="text-decoration-none">
+        <div class="pdf-card">
+            <img src="./assets/img/newsletter_thumbnail/NEWS_Issue 2 Quarter 2 Final.png"
+                alt="Preview of Newsletter"
+                loading="lazy"
+                class="img-fluid">
+          <div class="card-body text-center mt-2">
+            <h6>Innovation In Focus Quarter 2</h6>
             <small>Click to open PDF</small>
           </div>
         </div>
@@ -241,21 +137,123 @@
     </div>
 <!-- newspaper -->
     <div class="col-md-6 col-lg-4">
-      <a href="./assets/files/NEWS_IP-TBM (V2,Q4).pdf" target="_blank" class="text-decoration-none">
+      <a href="./assets/files/newspaper/Innovation In Focus Quarter 1.pdf" target="_blank" class="text-decoration-none">
+        <div class="pdf-card">
+            <img src="./assets/img/newsletter_thumbnail/NEWS_Innovation In Focus Q1.png"
+                alt="Preview of Newsletter"
+                loading="lazy"
+                class="img-fluid">
+          <div class="card-body text-center mt-2">
+            <h6>Innovation In Focus Quarter 1</h6>
+            <small>Click to open PDF</small>
+          </div>
+        </div>
+      </a>
+    </div>
+<!-- newspaper -->
+    <div class="col-md-6 col-lg-4">
+      <a href="./assets/files/newspaper/IPTBM In Focus, Volume 2, Quarter 4.pdf" target="_blank" class="text-decoration-none">
         <div class="pdf-card">
             <img src="./assets/img/newsletter_thumbnail/NEWS_IPTBM_(V2,Q4).png"
                 alt="Preview of Newsletter"
                 loading="lazy"
                 class="img-fluid">
           <div class="card-body text-center mt-2">
-            <h6>NEWS_IPTBM_(V2,Q4)</h6>
+            <h6>IPTBM In Focus, Volume 2, Quarter 4</h6>
             <small>Click to open PDF</small>
           </div>
         </div>
       </a>
     </div>
-
-
+<!-- newspaper -->
+    <div class="col-md-6 col-lg-4">
+      <a href="./assets/files/newspaper/IPTBM In Focus, Volume 2, Quarter 3.pdf" target="_blank" class="text-decoration-none">
+        <div class="pdf-card">
+            <img src="./assets/img/newsletter_thumbnail/NEWS_IP-TBM in Focus (V2,Q3).png"
+                alt="Preview of Newsletter"
+                loading="lazy"
+                class="img-fluid">
+          <div class="card-body text-center mt-2">
+            <h6>IPTBM In Focus, Volume 2, Quarter 3</h6>
+            <small>Click to open PDF</small>
+          </div>
+        </div>
+      </a>
+    </div>
+<!-- newspaper -->
+    <div class="col-md-6 col-lg-4">
+      <a href="./assets/files/newspaper/IPTBM In Focus, Volume 2, Quarter 2.pdf" target="_blank" class="text-decoration-none">
+        <div class="pdf-card">
+            <img src="./assets/img/newsletter_thumbnail/NEWS_IP-TBM in Focus (V2,Q2).png"
+                alt="Preview of Newsletter"
+                loading="lazy"
+                class="img-fluid">
+          <div class="card-body text-center mt-2">
+            <h6>IPTBM In Focus, Volume 2, Quarter 2</h6>
+            <small>Click to open PDF</small>
+          </div>
+        </div>
+      </a>
+    </div>
+    <div class="col-md-6 col-lg-4">
+      <a href="./assets/files/newspaper/IPTBM In Focus, Volume 2, Quarter 1.pdf" target="_blank" class="text-decoration-none">
+        <div class="pdf-card">
+            <img src="./assets/img/newsletter_thumbnail/NEWS_IP-TBM in Focus (V2,Q1) (1).png"
+                alt="Preview of Newsletter"
+                loading="lazy"
+                class="img-fluid">
+          <div class="card-body text-center mt-2">
+            <h6>IPTBM In Focus, Volume 2, Quarter 1</h6>
+            <small>Click to open PDF</small>
+          </div>
+        </div>
+      </a>
+    </div>
+<!-- newspaper -->
+    <div class="col-md-6 col-lg-4">
+      <a href="./assets/files/newspaper/IPTBM In Focus, Volume 1, Issue 3.pdf" target="_blank" class="text-decoration-none">
+        <div class="pdf-card">
+            <img src="./assets/img/newsletter_thumbnail/NEWS_FINAL Q4.png"
+                alt="Preview of Newsletter"
+                loading="lazy"
+                class="img-fluid">
+          <div class="card-body text-center mt-2">
+            <h6>IPTBM In Focus, Volume 1, Issue 3</h6>
+            <small>Click to open PDF</small>
+          </div>
+        </div>
+      </a>
+    </div>
+<!-- newspaper -->
+    <div class="col-md-6 col-lg-4">
+      <a href="./assets/files/newspaper/IPTBM In Focus, Volume 1, Issue 2.pdf" target="_blank" class="text-decoration-none">
+        <div class="pdf-card">
+            <img src="./assets/img/newsletter_thumbnail/NEWS_IPTBM In Focus (Q3).png"
+                alt="Preview of Newsletter"
+                loading="lazy"
+                class="img-fluid">
+          <div class="card-body text-center mt-2">
+            <h6>IPTBM In Focus, Volume 1, Issue 2</h6>
+            <small>Click to open PDF</small>
+          </div>
+        </div>
+      </a>
+    </div>
+    <!-- newsletter -->
+    <div class="col-md-6 col-lg-4">
+      <a href="./assets/files/newspaper/IPTBM In Focus, Volume 1, Issue 1.pdf" target="_blank" class="text-decoration-none">
+        <div class="pdf-card">
+            <img src="./assets/img/newsletter_thumbnail/NEWS_IPTBM In Focus, Volume 1, Issue 1.png"
+                alt="Preview of Newsletter"
+                loading="lazy"
+                class="img-fluid">
+          <div class="card-body text-center mt-2">
+            <h6>IPTBM In Focus, Volume 1, Issue 1</h6>
+            <small>Click to open PDF</small>
+          </div>
+        </div>
+      </a>
+    </div>
   </div>
 </section>
 
