--- a/Homepage.html
+++ b/Homepage.html
@@ -31,7 +31,7 @@
       <li class="heading-content-social">
         <a href="https://www.facebook.com/psau.kmc" class="social-icon" target="_blank"><i class="fa-brands fa-facebook"></i></a>
         <a href="#" class="social-icon"><i class="fa-brands fa-youtube"></i></a>
-        <a href="#" class="social-icon"><i class="fa-brands fa-tiktok"></i></a>
+        <a href="https://www.tiktok.com/@psaukmu?_t=ZS-8xqn6EGt5E7&_r=1" class="social-icon"><i class="fa-brands fa-tiktok"></i></a>
         <a href="https://mail.google.com/mail/?view=cm&fs=1&to=kmc@psau.edu.ph" target="_blank" class="social-icon"><i class="fas fa-envelope"></i></a>
       </li>
     </ul>
